# duino-coin-cpu

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  b.sh  i.sh  promt.md
.github/workflows/: build.yml
include/: benchmark.h  config.h  config_yaml.h  hasher.h  http_client.h  json.h  logger.h  miner.h  network.h  stats.h
src/: benchmark.cpp  config_yaml.cpp  hasher.cpp  http.cpp  json.cpp  logger.cpp  main.cpp  miner.cpp  network.cpp  stats.cpp
